--- a/packages.yml
+++ b/packages.yml
@@ -1,9 +1,9 @@
 packages:
 # - package: fivetran/shopify_source
-#   version: [">=0.7.0", "<0.8.0"]
+#   version: [">=0.8.0", "<0.9.0"]
 
-  - git: https://github.com/fivetran/dbt_shopify_source.git
-    revision: feature/revamp/documentation
-    warn-unpinned: false
+  # - git: https://github.com/fivetran/dbt_shopify_source.git
+  #   revision: feature/revamp/documentation
+  #   warn-unpinned: false
 
-  # - local: ../Shopify/dbt_shopify_source
+  - local: ../Shopify/dbt_shopify_source
