reconcile with parent

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -47,3 +47,4 @@ vars:
     shopify_abandoned_checkout_discount_code: "{{ ref('stg_shopify__abandoned_checkout_discount_code') }}"
     shopify_order_discount_code: "{{ ref('stg_shopify__order_discount_code') }}"
     shopify_abandoned_checkout_shipping_line: "{{ ref('stg_shopify__abandoned_checkout_shipping_line') }}"
+    shopify_fulfillment_event: "{{ ref('stg_shopify__fulfillment_event') }}"
